<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HiraganaAndKatakana</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>

    <!-- ktore korzystam do tlumaczen-->
    <string name="start">Start</string>
    <string name="tytul">Hiragana &amp; Katakana</string>
    <string name="wersja_podstawowa">Wersja Podstawowa</string>
    <string name="wersja_premium">Wersja Premium</string>
    <string name="wybierz_jezyk">Wybierz język</string>
    <string name="gotowy">Gotowy</string>
    <string name="znaki">Znaki</string>
    <string name="slowa">Słowa</string>
    <string name="zdania">Zdania</string>
    <string name="spacja">SPACJA</string>
    <!--do hiragana katakany-->
    <string name="podstawa">Podstawa</string>
    <string name="premium">Premium</string>
    <string name="podstawoweWybor">Podstawowe</string>
    <string name="dakutenWybor">Dakuten</string>
    <string name="kombinowaneWybor">Kombinowane</string>
    <!--ustawienia do znakow-->
    <string name="typZnakow">Wybierz typ znaków</string>
    <string name="podstawowe">PODSTAWOWE</string>
    <!--dla mojego mozgu nie ma to tlumaczenia-->
    <string name="dakuten">DAKUTEN</string>
    <string name="kombinowane">KOMBINOWANE</string>
    <string name="ustaw">Ustaw</string>

    <string name="podstawoweWyb">PODSTAWOWE ✓</string>
    <string name="dakutenWyb">DAKUTEN ✓</string>
    <string name="kombinowaneWyb">KOMBINOWANE ✓</string>

    <!--do profilu -->
    <string name="profil">Mój profil</string>
    <string name="premiumBol">Premium</string>
    <string name="premiumTrue">Tak</string>
    <string name="premiumFalse">Nie</string>
    <string name="czas">Czas sesji:</string>
    <string name="wyloguj">Wyloguj się</string>
    <string name="email">Email</string>
    <!--Do logowania -->
    <string name="haslo">Hasło</string>
    <string name="logowanie">Logowanie</string>
    <string name="rejestracja">Zarejestruj się</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="brakKonta">Nie masz konta? Zarejestruj się</string>
    <string name="jestKonto">Masz konto? Zaloguj się</string>
    <string name="made_by">MadeByMythical</string>
    <!--ustawienia ogolne-->
    <string name="ustawienia">Ustawienia</string>
    <string name="tryb">Wybierz tryb</string>
    <string name="jasny">Jasny</string>
    <string name="ciemny">Ciemny</string>
    <string name="zmienjezyk">Zmien Jezyk</string>


    <!--Znaki-->
    <string name="LiteraQ">Q</string>
    <string name="LiteraW">W</string>
    <string name="LiteraE">E</string>
    <string name="LiteraR">R</string>
    <string name="LiteraT">T</string>
    <string name="LiteraY">Y</string>
    <string name="LiteraU">U</string>
    <string name="LiteraI">I</string>
    <string name="LiteraO">O</string>
    <string name="LiteraP">P</string>
    <string name="LiteraA">A</string>
    <string name="LiteraS">S</string>
    <string name="LiteraD">D</string>
    <string name="LiteraF">F</string>
    <string name="LiteraG">G</string>
    <string name="LiteraH">H</string>
    <string name="LiteraJ">J</string>
    <string name="LiteraK">K</string>
    <string name="LiteraL">L</string>
    <string name="LiteraZ">Z</string>
    <string name="LiteraX">X</string>
    <string name="LiteraC">C</string>
    <string name="LiteraV">V</string>
    <string name="LiteraB">B</string>
    <string name="LiteraN">N</string>
    <string name="LiteraM">M</string>
    <string name="sprawdz_klawiatura">👍</string>
    <string name="cofnij_klawiatura">⌫</string>
    <string name="cofniecie">Cofniecie</string>
    <string name="losuj">🎲</string>
    <string name="ustawienia_donauki">Ustawienia</string>



    <string name="wybierz_znak">Wybierz przynajmniej jeden znak!</string>
    <string name="zacznij_nauke">Zacznij naukę</string>
    <string name="hiragana_podstawowe">Hiragana Podstawowe</string>
    <string name="hiragana_dakuten">Hiragana Dakuten</string>
    <string name="hiragana_kombinowane">Hiragana Kombinowane</string>
    <string name="katakana_podstawowe">Katakana Podstawowe</string>
    <string name="katakana_dakuten">Katakana Dakuten</string>
    <string name="katakana_kombinowane">Katakana Kombinowane</string>
    <string name="dodaj_katakana">DODAJ KATAKANA</string>
    <string name="ukryj_katakana">UKRYJ KATAKANA</string>
    <string name="ustaw_powtorzenia">Ustaw powtórzenia</string>
    <string name="ok">OK</string>
    <string name="anuluj">Anuluj</string>

    <string name="premium_info">
Witaj, użytkowniku premium!\n
Jest to jedna z zaawansowanych funkcji dostępnych w aplikacji.\n
Możesz wybrać dokładnie, których znaków chcesz się uczyć,\n
a nawet ustawić częstotliwość ich pojawiania się.\n
Jeśli klikniesz dwa razy na wybrany znak,\n
po lewej stronie oraz u góry możesz zaznaczyć\n
cały rząd lub kolumnę.\n
Po kliknięciu „Dodaj Katakanę”\n
dodasz katakanę do ogólnej nauki —\n
jest to szybsza metoda nauki.
</string>
    <string name="pomoc">POMOC</string>

    <string name="nie_moze_byc_pusty">Email nie może być pusty</string>
    <string name="email_resetujacy">Email resetujący wysłany! Sprawdź skrzynkę.</string>
    <string name="nie_ma_emaila">Nie istnieje taki email</string>

    <string name="znaki6">6+ znaków</string>
    <string name="cyfra">Cyfra</string>
    <string name="wielka">Wielka litera</string>
    <string name="mala">Mała litera</string>

    <string name="strona">Odwiedź stronę</string>
    <string name="odzyskiwanie_hasla">Odzyskiwanie hasła</string>
    <string name="wyslij_email">Wyślij email resetujący</string>
    <string name="zapomnialem_haslo">Zapomniałem hasła</string>

    <string name="zajety_email">Email jest już zajęty</string>
    <string name="zle_haslo_lub_email">Email albo hasło jest złe</string>
    <string name="usun_konto">Usuń konto</string>
    <string name="haslo_puste">Hasło nie może być puste</string>
    <string name="blad_uzytkownika">Błąd użytkownika</string>
    <string name="zle_haslo">Błędne hasło</string>
    <string name="jestes_pewny">
    Czy jesteś pewny, że chcesz usunąć swoje konto? Tej operacji nie można cofnąć.
</string>
    <string name="tak">Tak</string>
    <string name="nie">Nie</string>
    <string name="wprowadz_haslo">
    Wprowadź hasło, aby potwierdzić usunięcie konta:
</string>
    <string name="potwierdz">Potwierdź</string>

</resources>