<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/tlo_glowne"
    tools:context=".CharacterSelectionActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        style="@style/BackButtonStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDodajKatakana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dodaj_katakana"
        android:textSize="12sp"
        android:paddingHorizontal="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/kategorieContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvPodstawowe"
            android:tag="PODSTAWOWE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/podstawoweWybor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/przycisk_glowny"
            android:textColor="@color/tekst_na_glownym"
            android:layout_marginEnd="1dp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tvDakuten"
            android:tag="DAKUTEN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dakutenWybor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/przycisk_dodatkowy"
            android:textColor="@color/tekst_na_dodatkowym"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tvKombinowane"
            android:tag="KOMBINOWANE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kombinowaneWybor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/przycisk_dodatkowy"
            android:textColor="@color/tekst_na_dodatkowym"
            android:layout_marginStart="1dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kategorieKatakanaContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:padding="2dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/kategorieContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvKatakanaPodstawowe"
            android:tag="PODSTAWOWE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/katakana_podstawowe"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/przycisk_dodatkowy"
            android:textColor="@color/tekst_na_dodatkowym"
            android:layout_marginEnd="1dp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tvKatakanaDakuten"
            android:tag="DAKUTEN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/katakana_dakuten"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/przycisk_dodatkowy"
            android:textColor="@color/tekst_na_dodatkowym"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tvKatakanaKombinowane"
            android:tag="KOMBINOWANE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/katakana_kombinowane"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/przycisk_dodatkowy"
            android:textColor="@color/tekst_na_dodatkowym"
            android:layout_marginStart="1dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/kategorieKatakanaContainer"
        app:layout_constraintBottom_toTopOf="@id/bottomButtonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <LinearLayout
                android:id="@+id/kontenerPrzyciskowKolumn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp" />

            <GridLayout
                android:id="@+id/gridCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="6" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnPomoc"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/pomoc"
            android:scaleType="centerInside"
            android:src="@drawable/znakzapytania"
          />

        <Button
            android:id="@+id/btnZacznijNauke"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zacznij_nauke"
            android:textSize="14sp"
            android:backgroundTint="@color/przycisk_glowny"
            android:textColor="@color/tekst_na_glownym"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp"
            android:stateListAnimator="@null"
            android:layout_marginEnd="4dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>